syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.j5ik2o.threadWeaver.adaptor.grpc";
option java_outer_classname = "ThreadQueryProto";

package thread;

import "thread/model.proto";

service ThreadQueryService {
    rpc GetThread (GetThreadRequest) returns (GetThreadResponse) {}
}